# space-tracker

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/: CODEOWNERS
docs/: data-sources.md  horizons-api-notes.md  roadmap.md
space_tracker/: app.py  config.py
space_tracker/api/: celestrak.py  close_approaches.py  donki.py  events.py  geolocation.py  horizons.py
space_tracker/screens/: location_setup.py
space_tracker/tabs/: close_approaches.py  events_calendar.py  object_detail.py  satellites.py  search.py  sky_now.py  solar_activity.py
tests/: test_cache.py  test_close_approaches.py  test_config.py  test_events.py  test_geolocation.py  test_horizons_parser.py  test_object_detail.py  test_rise_transit_set.py  test_satellites.py  test_search.py  test_sky_now.py  test_solar_activity.py
