[project]
name = "space-tracker"
version = "0.1.0"
description = "A TUI for amateur astronomers to track celestial objects"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0.0",
    "httpx>=0.27.0",
    "skyfield>=1.49",
]

[project.scripts]
space-tracker = "space_tracker.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-textual-snapshot>=1.0.0",
    "ruff>=0.15.5",
]
